--- a/Autonomous_driving_application_Car_detection.ipynb
+++ b/Autonomous_driving_application_Car_detection.ipynb
@@ -903,7 +903,7 @@
     "If you were to run your session in a for loop over all your images. Here's what you would get:\n",
     "\n",
     "<center>\n",
-    "<img width=\"400\" height=\"200\" src=\"Detections.gif\" >\n",
+    "<img width=\"400\" height=\"200\" src=\"Detection.gif\" >\n",
     "</video>\n",
     "</center>\n",
     "\n"
